Correction de l'overflow qui créé un bug sur l'affichage global des pages

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
   background: #fafafa;
   font-family: 'Roboto', sans-serif;
   position: relative;
+  overflow-x: hidden;
 }
 
 .App {
